new/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    VAZIO
    E_LOGICO
    PRINCIPAL
    NOVA_LINHA
    OU_LOGICO

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracoes
Rule 2     lista_declaracoes -> lista_declaracoes declaracao
Rule 3     lista_declaracoes -> declaracao
Rule 4     declaracao -> declaracao_variaveis
Rule 5     declaracao -> inicializacao_variaveis
Rule 6     declaracao -> declaracao_funcao
Rule 7     declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis
Rule 8     inicializacao_variaveis -> atribuicao
Rule 9     lista_variaveis -> var VIRGULA lista_variaveis
Rule 10    lista_variaveis -> var
Rule 11    var -> IDENTIFICADOR
Rule 12    var -> IDENTIFICADOR indice
Rule 13    indice -> indice ABRE_COLXETE expressao FECHA_COLXETE
Rule 14    indice -> ABRE_COLXETE expressao FECHA_COLXETE
Rule 15    tipo -> INTEIRO
Rule 16    tipo -> FLUTUANTE
Rule 17    declaracao_funcao -> tipo cabecalho
Rule 18    declaracao_funcao -> cabecalho
Rule 19    cabecalho -> IDENTIFICADOR ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo FIM
Rule 20    lista_parametros -> lista_parametros VIRGULA lista_parametros
Rule 21    lista_parametros -> parametro
Rule 22    lista_parametros -> vazio
Rule 23    parametro -> tipo DOIS_PONTOS IDENTIFICADOR
Rule 24    parametro -> parametro ABRE_COLXETE FECHA_COLXETE
Rule 25    corpo -> corpo acao
Rule 26    corpo -> vazio
Rule 27    acao -> expressao
Rule 28    acao -> declaracao_variaveis
Rule 29    acao -> se
Rule 30    acao -> repita
Rule 31    acao -> leia
Rule 32    acao -> escreva
Rule 33    acao -> retorna
Rule 34    acao -> error
Rule 35    se -> SE expressao ENTAO corpo FIM
Rule 36    se -> SE expressao ENTAO corpo SENAO corpo FIM
Rule 37    repita -> REPITA corpo ATE expressao
Rule 38    atribuicao -> var ATRIBUICAO expressao
Rule 39    leia -> LEIA ABRE_PARENTESES IDENTIFICADOR FECHA_PARENTESES
Rule 40    escreva -> ESCREVA ABRE_PARENTESES expressao FECHA_PARENTESES
Rule 41    retorna -> RETORNA ABRE_PARENTESES expressao FECHA_PARENTESES
Rule 42    expressao -> expressao_simples
Rule 43    expressao -> atribuicao
Rule 44    expressao_simples -> expressao_aditiva
Rule 45    expressao_simples -> expressao_simples operador_relacional expressao_aditiva
Rule 46    expressao_aditiva -> expressao_multiplicativa
Rule 47    expressao_aditiva -> expressao_aditiva operador_multiplicacao expressao_unaria
Rule 48    expressao_multiplicativa -> expressao_unaria
Rule 49    expressao_multiplicativa -> expressao_multiplicativa operador_multiplicacao expressao_unaria
Rule 50    expressao_unaria -> fator
Rule 51    expressao_unaria -> operador_soma fator
Rule 52    operador_relacional -> MENOR
Rule 53    operador_relacional -> MAIOR
Rule 54    operador_relacional -> IGUAL
Rule 55    operador_relacional -> MENOR_IGUAL
Rule 56    operador_relacional -> MAIOR_IGUAL
Rule 57    operador_relacional -> NEGACAO
Rule 58    operador_soma -> SOMA
Rule 59    operador_soma -> SUBTRACAO
Rule 60    operador_multiplicacao -> MULTIPLICACAO
Rule 61    operador_multiplicacao -> DIVISAO
Rule 62    fator -> ABRE_COLXETE expressao FECHA_COLXETE
Rule 63    fator -> var
Rule 64    fator -> chamada_funcao
Rule 65    fator -> numero
Rule 66    numero -> INTEIRO
Rule 67    numero -> FLUTUANTE
Rule 68    chamada_funcao -> IDENTIFICADOR ABRE_PARENTESES lista_argumentos FECHA_PARENTESES
Rule 69    lista_argumentos -> lista_argumentos VIRGULA expressao
Rule 70    lista_argumentos -> expressao
Rule 71    lista_argumentos -> vazio
Rule 72    vazio -> <empty>

Terminals, with rules where they appear

ABRE_COLXETE         : 13 14 24 62
ABRE_PARENTESES      : 19 39 40 41 68
ATE                  : 37
ATRIBUICAO           : 38
DIVISAO              : 61
DOIS_PONTOS          : 7 23
ENTAO                : 35 36
ESCREVA              : 40
E_LOGICO             : 
FECHA_COLXETE        : 13 14 24 62
FECHA_PARENTESES     : 19 39 40 41 68
FIM                  : 19 35 36
FLUTUANTE            : 16 67
IDENTIFICADOR        : 11 12 19 23 39 68
IGUAL                : 54
INTEIRO              : 15 66
LEIA                 : 39
MAIOR                : 53
MAIOR_IGUAL          : 56
MENOR                : 52
MENOR_IGUAL          : 55
MULTIPLICACAO        : 60
NEGACAO              : 57
NOVA_LINHA           : 
OU_LOGICO            : 
PRINCIPAL            : 
REPITA               : 37
RETORNA              : 41
SE                   : 35 36
SENAO                : 36
SOMA                 : 58
SUBTRACAO            : 59
VAZIO                : 
VIRGULA              : 9 20 69
error                : 34

Nonterminals, with rules where they appear

acao                 : 25
atribuicao           : 8 43
cabecalho            : 17 18
chamada_funcao       : 64
corpo                : 19 25 35 36 36 37
declaracao           : 2 3
declaracao_funcao    : 6
declaracao_variaveis : 4 28
escreva              : 32
expressao            : 13 14 27 35 36 37 38 40 41 62 69 70
expressao_aditiva    : 44 45 47
expressao_multiplicativa : 46 49
expressao_simples    : 42 45
expressao_unaria     : 47 48 49
fator                : 50 51
indice               : 12 13
inicializacao_variaveis : 5
leia                 : 31
lista_argumentos     : 68 69
lista_declaracoes    : 1 2
lista_parametros     : 19 20 20
lista_variaveis      : 7 9
numero               : 65
operador_multiplicacao : 47 49
operador_relacional  : 45
operador_soma        : 51
parametro            : 21 24
programa             : 0
repita               : 30
retorna              : 33
se                   : 29
tipo                 : 7 17 23
var                  : 9 10 38 63
vazio                : 22 26 71

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracoes
    (2) lista_declaracoes -> . lista_declaracoes declaracao
    (3) lista_declaracoes -> . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (18) declaracao_funcao -> . cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (38) atribuicao -> . var ATRIBUICAO expressao
    (19) cabecalho -> . IDENTIFICADOR ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo FIM
    (11) var -> . IDENTIFICADOR
    (12) var -> . IDENTIFICADOR indice

    INTEIRO         shift and go to state 5
    FLUTUANTE       shift and go to state 2
    IDENTIFICADOR   shift and go to state 10

    inicializacao_variaveis        shift and go to state 1
    cabecalho                      shift and go to state 6
    declaracao_funcao              shift and go to state 7
    var                            shift and go to state 8
    declaracao_variaveis           shift and go to state 4
    lista_declaracoes              shift and go to state 11
    atribuicao                     shift and go to state 3
    tipo                           shift and go to state 12
    programa                       shift and go to state 9
    declaracao                     shift and go to state 13

state 1

    (5) declaracao -> inicializacao_variaveis .

    INTEIRO         reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    FLUTUANTE       reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    IDENTIFICADOR   reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    $end            reduce using rule 5 (declaracao -> inicializacao_variaveis .)


state 2

    (16) tipo -> FLUTUANTE .

    DOIS_PONTOS     reduce using rule 16 (tipo -> FLUTUANTE .)
    IDENTIFICADOR   reduce using rule 16 (tipo -> FLUTUANTE .)


state 3

    (8) inicializacao_variaveis -> atribuicao .

    INTEIRO         reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    FLUTUANTE       reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    IDENTIFICADOR   reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    $end            reduce using rule 8 (inicializacao_variaveis -> atribuicao .)


state 4

    (4) declaracao -> declaracao_variaveis .

    INTEIRO         reduce using rule 4 (declaracao -> declaracao_variaveis .)
    FLUTUANTE       reduce using rule 4 (declaracao -> declaracao_variaveis .)
    IDENTIFICADOR   reduce using rule 4 (declaracao -> declaracao_variaveis .)
    $end            reduce using rule 4 (declaracao -> declaracao_variaveis .)


state 5

    (15) tipo -> INTEIRO .

    DOIS_PONTOS     reduce using rule 15 (tipo -> INTEIRO .)
    IDENTIFICADOR   reduce using rule 15 (tipo -> INTEIRO .)


state 6

    (18) declaracao_funcao -> cabecalho .

    INTEIRO         reduce using rule 18 (declaracao_funcao -> cabecalho .)
    FLUTUANTE       reduce using rule 18 (declaracao_funcao -> cabecalho .)
    IDENTIFICADOR   reduce using rule 18 (declaracao_funcao -> cabecalho .)
    $end            reduce using rule 18 (declaracao_funcao -> cabecalho .)


state 7

    (6) declaracao -> declaracao_funcao .

    INTEIRO         reduce using rule 6 (declaracao -> declaracao_funcao .)
    FLUTUANTE       reduce using rule 6 (declaracao -> declaracao_funcao .)
    IDENTIFICADOR   reduce using rule 6 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 6 (declaracao -> declaracao_funcao .)


state 8

    (38) atribuicao -> var . ATRIBUICAO expressao

    ATRIBUICAO      shift and go to state 14


state 9

    (0) S' -> programa .



state 10

    (19) cabecalho -> IDENTIFICADOR . ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo FIM
    (11) var -> IDENTIFICADOR .
    (12) var -> IDENTIFICADOR . indice
    (13) indice -> . indice ABRE_COLXETE expressao FECHA_COLXETE
    (14) indice -> . ABRE_COLXETE expressao FECHA_COLXETE

    ABRE_PARENTESES shift and go to state 15
    ATRIBUICAO      reduce using rule 11 (var -> IDENTIFICADOR .)
    ABRE_COLXETE    shift and go to state 16

    indice                         shift and go to state 17

state 11

    (1) programa -> lista_declaracoes .
    (2) lista_declaracoes -> lista_declaracoes . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (18) declaracao_funcao -> . cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (38) atribuicao -> . var ATRIBUICAO expressao
    (19) cabecalho -> . IDENTIFICADOR ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo FIM
    (11) var -> . IDENTIFICADOR
    (12) var -> . IDENTIFICADOR indice

    $end            reduce using rule 1 (programa -> lista_declaracoes .)
    INTEIRO         shift and go to state 5
    FLUTUANTE       shift and go to state 2
    IDENTIFICADOR   shift and go to state 10

    inicializacao_variaveis        shift and go to state 1
    cabecalho                      shift and go to state 6
    declaracao_funcao              shift and go to state 7
    var                            shift and go to state 8
    declaracao                     shift and go to state 18
    atribuicao                     shift and go to state 3
    tipo                           shift and go to state 12
    declaracao_variaveis           shift and go to state 4

state 12

    (7) declaracao_variaveis -> tipo . DOIS_PONTOS lista_variaveis
    (17) declaracao_funcao -> tipo . cabecalho
    (19) cabecalho -> . IDENTIFICADOR ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo FIM

    DOIS_PONTOS     shift and go to state 21
    IDENTIFICADOR   shift and go to state 19

    cabecalho                      shift and go to state 20

state 13

    (3) lista_declaracoes -> declaracao .

    INTEIRO         reduce using rule 3 (lista_declaracoes -> declaracao .)
    FLUTUANTE       reduce using rule 3 (lista_declaracoes -> declaracao .)
    IDENTIFICADOR   reduce using rule 3 (lista_declaracoes -> declaracao .)
    $end            reduce using rule 3 (lista_declaracoes -> declaracao .)


state 14

    (38) atribuicao -> var ATRIBUICAO . expressao
    (42) expressao -> . expressao_simples
    (43) expressao -> . atribuicao
    (44) expressao_simples -> . expressao_aditiva
    (45) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (38) atribuicao -> . var ATRIBUICAO expressao
    (46) expressao_aditiva -> . expressao_multiplicativa
    (47) expressao_aditiva -> . expressao_aditiva operador_multiplicacao expressao_unaria
    (11) var -> . IDENTIFICADOR
    (12) var -> . IDENTIFICADOR indice
    (48) expressao_multiplicativa -> . expressao_unaria
    (49) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (50) expressao_unaria -> . fator
    (51) expressao_unaria -> . operador_soma fator
    (62) fator -> . ABRE_COLXETE expressao FECHA_COLXETE
    (63) fator -> . var
    (64) fator -> . chamada_funcao
    (65) fator -> . numero
    (58) operador_soma -> . SOMA
    (59) operador_soma -> . SUBTRACAO
    (68) chamada_funcao -> . IDENTIFICADOR ABRE_PARENTESES lista_argumentos FECHA_PARENTESES
    (66) numero -> . INTEIRO
    (67) numero -> . FLUTUANTE

    IDENTIFICADOR   shift and go to state 37
    ABRE_COLXETE    shift and go to state 33
    SOMA            shift and go to state 30
    SUBTRACAO       shift and go to state 24
    INTEIRO         shift and go to state 22
    FLUTUANTE       shift and go to state 32

    expressao_simples              shift and go to state 31
    numero                         shift and go to state 25
    expressao_unaria               shift and go to state 34
    expressao_aditiva              shift and go to state 35
    var                            shift and go to state 36
    operador_soma                  shift and go to state 23
    expressao_multiplicativa       shift and go to state 26
    expressao                      shift and go to state 27
    atribuicao                     shift and go to state 28
    chamada_funcao                 shift and go to state 29
    fator                          shift and go to state 38

state 15

    (19) cabecalho -> IDENTIFICADOR ABRE_PARENTESES . lista_parametros FECHA_PARENTESES corpo FIM
    (20) lista_parametros -> . lista_parametros VIRGULA lista_parametros
    (21) lista_parametros -> . parametro
    (22) lista_parametros -> . vazio
    (23) parametro -> . tipo DOIS_PONTOS IDENTIFICADOR
    (24) parametro -> . parametro ABRE_COLXETE FECHA_COLXETE
    (72) vazio -> .
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE

    FECHA_PARENTESES reduce using rule 72 (vazio -> .)
    VIRGULA         reduce using rule 72 (vazio -> .)
    INTEIRO         shift and go to state 5
    FLUTUANTE       shift and go to state 2

    tipo                           shift and go to state 42
    parametro                      shift and go to state 41
    vazio                          shift and go to state 39
    lista_parametros               shift and go to state 40

state 16

    (14) indice -> ABRE_COLXETE . expressao FECHA_COLXETE
    (42) expressao -> . expressao_simples
    (43) expressao -> . atribuicao
    (44) expressao_simples -> . expressao_aditiva
    (45) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (38) atribuicao -> . var ATRIBUICAO expressao
    (46) expressao_aditiva -> . expressao_multiplicativa
    (47) expressao_aditiva -> . expressao_aditiva operador_multiplicacao expressao_unaria
    (11) var -> . IDENTIFICADOR
    (12) var -> . IDENTIFICADOR indice
    (48) expressao_multiplicativa -> . expressao_unaria
    (49) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (50) expressao_unaria -> . fator
    (51) expressao_unaria -> . operador_soma fator
    (62) fator -> . ABRE_COLXETE expressao FECHA_COLXETE
    (63) fator -> . var
    (64) fator -> . chamada_funcao
    (65) fator -> . numero
    (58) operador_soma -> . SOMA
    (59) operador_soma -> . SUBTRACAO
    (68) chamada_funcao -> . IDENTIFICADOR ABRE_PARENTESES lista_argumentos FECHA_PARENTESES
    (66) numero -> . INTEIRO
    (67) numero -> . FLUTUANTE

    IDENTIFICADOR   shift and go to state 37
    ABRE_COLXETE    shift and go to state 33
    SOMA            shift and go to state 30
    SUBTRACAO       shift and go to state 24
    INTEIRO         shift and go to state 22
    FLUTUANTE       shift and go to state 32

    expressao_simples              shift and go to state 31
    numero                         shift and go to state 25
    expressao_unaria               shift and go to state 34
    expressao_aditiva              shift and go to state 35
    var                            shift and go to state 36
    operador_soma                  shift and go to state 23
    expressao_multiplicativa       shift and go to state 26
    expressao                      shift and go to state 43
    atribuicao                     shift and go to state 28
    chamada_funcao                 shift and go to state 29
    fator                          shift and go to state 38

state 17

    (12) var -> IDENTIFICADOR indice .
    (13) indice -> indice . ABRE_COLXETE expressao FECHA_COLXETE

  ! shift/reduce conflict for ABRE_COLXETE resolved as shift
    ATRIBUICAO      reduce using rule 12 (var -> IDENTIFICADOR indice .)
    MULTIPLICACAO   reduce using rule 12 (var -> IDENTIFICADOR indice .)
    DIVISAO         reduce using rule 12 (var -> IDENTIFICADOR indice .)
    MENOR           reduce using rule 12 (var -> IDENTIFICADOR indice .)
    MAIOR           reduce using rule 12 (var -> IDENTIFICADOR indice .)
    IGUAL           reduce using rule 12 (var -> IDENTIFICADOR indice .)
    MENOR_IGUAL     reduce using rule 12 (var -> IDENTIFICADOR indice .)
    MAIOR_IGUAL     reduce using rule 12 (var -> IDENTIFICADOR indice .)
    NEGACAO         reduce using rule 12 (var -> IDENTIFICADOR indice .)
    FIM             reduce using rule 12 (var -> IDENTIFICADOR indice .)
    error           reduce using rule 12 (var -> IDENTIFICADOR indice .)
    SE              reduce using rule 12 (var -> IDENTIFICADOR indice .)
    REPITA          reduce using rule 12 (var -> IDENTIFICADOR indice .)
    LEIA            reduce using rule 12 (var -> IDENTIFICADOR indice .)
    ESCREVA         reduce using rule 12 (var -> IDENTIFICADOR indice .)
    RETORNA         reduce using rule 12 (var -> IDENTIFICADOR indice .)
    INTEIRO         reduce using rule 12 (var -> IDENTIFICADOR indice .)
    FLUTUANTE       reduce using rule 12 (var -> IDENTIFICADOR indice .)
    IDENTIFICADOR   reduce using rule 12 (var -> IDENTIFICADOR indice .)
    SOMA            reduce using rule 12 (var -> IDENTIFICADOR indice .)
    SUBTRACAO       reduce using rule 12 (var -> IDENTIFICADOR indice .)
    FECHA_PARENTESES reduce using rule 12 (var -> IDENTIFICADOR indice .)
    VIRGULA         reduce using rule 12 (var -> IDENTIFICADOR indice .)
    ATE             reduce using rule 12 (var -> IDENTIFICADOR indice .)
    SENAO           reduce using rule 12 (var -> IDENTIFICADOR indice .)
    FECHA_COLXETE   reduce using rule 12 (var -> IDENTIFICADOR indice .)
    $end            reduce using rule 12 (var -> IDENTIFICADOR indice .)
    ENTAO           reduce using rule 12 (var -> IDENTIFICADOR indice .)
    ABRE_COLXETE    shift and go to state 44

  ! ABRE_COLXETE    [ reduce using rule 12 (var -> IDENTIFICADOR indice .) ]


state 18

    (2) lista_declaracoes -> lista_declaracoes declaracao .

    INTEIRO         reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    FLUTUANTE       reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    IDENTIFICADOR   reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    $end            reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)


state 19

    (19) cabecalho -> IDENTIFICADOR . ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo FIM

    ABRE_PARENTESES shift and go to state 15


state 20

    (17) declaracao_funcao -> tipo cabecalho .

    INTEIRO         reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    FLUTUANTE       reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    IDENTIFICADOR   reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    $end            reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)


state 21

    (7) declaracao_variaveis -> tipo DOIS_PONTOS . lista_variaveis
    (9) lista_variaveis -> . var VIRGULA lista_variaveis
    (10) lista_variaveis -> . var
    (11) var -> . IDENTIFICADOR
    (12) var -> . IDENTIFICADOR indice

    IDENTIFICADOR   shift and go to state 47

    lista_variaveis                shift and go to state 45
    var                            shift and go to state 46

state 22

    (66) numero -> INTEIRO .

    MULTIPLICACAO   reduce using rule 66 (numero -> INTEIRO .)
    DIVISAO         reduce using rule 66 (numero -> INTEIRO .)
    MENOR           reduce using rule 66 (numero -> INTEIRO .)
    MAIOR           reduce using rule 66 (numero -> INTEIRO .)
    IGUAL           reduce using rule 66 (numero -> INTEIRO .)
    MENOR_IGUAL     reduce using rule 66 (numero -> INTEIRO .)
    MAIOR_IGUAL     reduce using rule 66 (numero -> INTEIRO .)
    NEGACAO         reduce using rule 66 (numero -> INTEIRO .)
    FECHA_PARENTESES reduce using rule 66 (numero -> INTEIRO .)
    INTEIRO         reduce using rule 66 (numero -> INTEIRO .)
    FLUTUANTE       reduce using rule 66 (numero -> INTEIRO .)
    IDENTIFICADOR   reduce using rule 66 (numero -> INTEIRO .)
    $end            reduce using rule 66 (numero -> INTEIRO .)
    FECHA_COLXETE   reduce using rule 66 (numero -> INTEIRO .)
    VIRGULA         reduce using rule 66 (numero -> INTEIRO .)
    FIM             reduce using rule 66 (numero -> INTEIRO .)
    error           reduce using rule 66 (numero -> INTEIRO .)
    SE              reduce using rule 66 (numero -> INTEIRO .)
    REPITA          reduce using rule 66 (numero -> INTEIRO .)
    LEIA            reduce using rule 66 (numero -> INTEIRO .)
    ESCREVA         reduce using rule 66 (numero -> INTEIRO .)
    RETORNA         reduce using rule 66 (numero -> INTEIRO .)
    ABRE_COLXETE    reduce using rule 66 (numero -> INTEIRO .)
    SOMA            reduce using rule 66 (numero -> INTEIRO .)
    SUBTRACAO       reduce using rule 66 (numero -> INTEIRO .)
    ENTAO           reduce using rule 66 (numero -> INTEIRO .)
    ATE             reduce using rule 66 (numero -> INTEIRO .)
    SENAO           reduce using rule 66 (numero -> INTEIRO .)


state 23

    (51) expressao_unaria -> operador_soma . fator
    (62) fator -> . ABRE_COLXETE expressao FECHA_COLXETE
    (63) fator -> . var
    (64) fator -> . chamada_funcao
    (65) fator -> . numero
    (11) var -> . IDENTIFICADOR
    (12) var -> . IDENTIFICADOR indice
    (68) chamada_funcao -> . IDENTIFICADOR ABRE_PARENTESES lista_argumentos FECHA_PARENTESES
    (66) numero -> . INTEIRO
    (67) numero -> . FLUTUANTE

    ABRE_COLXETE    shift and go to state 33
    IDENTIFICADOR   shift and go to state 37
    INTEIRO         shift and go to state 22
    FLUTUANTE       shift and go to state 32

    var                            shift and go to state 48
    numero                         shift and go to state 25
    chamada_funcao                 shift and go to state 29
    fator                          shift and go to state 49

state 24

    (59) operador_soma -> SUBTRACAO .

    ABRE_COLXETE    reduce using rule 59 (operador_soma -> SUBTRACAO .)
    IDENTIFICADOR   reduce using rule 59 (operador_soma -> SUBTRACAO .)
    INTEIRO         reduce using rule 59 (operador_soma -> SUBTRACAO .)
    FLUTUANTE       reduce using rule 59 (operador_soma -> SUBTRACAO .)


state 25

    (65) fator -> numero .

    MULTIPLICACAO   reduce using rule 65 (fator -> numero .)
    DIVISAO         reduce using rule 65 (fator -> numero .)
    MENOR           reduce using rule 65 (fator -> numero .)
    MAIOR           reduce using rule 65 (fator -> numero .)
    IGUAL           reduce using rule 65 (fator -> numero .)
    MENOR_IGUAL     reduce using rule 65 (fator -> numero .)
    MAIOR_IGUAL     reduce using rule 65 (fator -> numero .)
    NEGACAO         reduce using rule 65 (fator -> numero .)
    INTEIRO         reduce using rule 65 (fator -> numero .)
    FLUTUANTE       reduce using rule 65 (fator -> numero .)
    IDENTIFICADOR   reduce using rule 65 (fator -> numero .)
    $end            reduce using rule 65 (fator -> numero .)
    FECHA_COLXETE   reduce using rule 65 (fator -> numero .)
    FECHA_PARENTESES reduce using rule 65 (fator -> numero .)
    VIRGULA         reduce using rule 65 (fator -> numero .)
    FIM             reduce using rule 65 (fator -> numero .)
    error           reduce using rule 65 (fator -> numero .)
    SE              reduce using rule 65 (fator -> numero .)
    REPITA          reduce using rule 65 (fator -> numero .)
    LEIA            reduce using rule 65 (fator -> numero .)
    ESCREVA         reduce using rule 65 (fator -> numero .)
    RETORNA         reduce using rule 65 (fator -> numero .)
    ABRE_COLXETE    reduce using rule 65 (fator -> numero .)
    SOMA            reduce using rule 65 (fator -> numero .)
    SUBTRACAO       reduce using rule 65 (fator -> numero .)
    ENTAO           reduce using rule 65 (fator -> numero .)
    ATE             reduce using rule 65 (fator -> numero .)
    SENAO           reduce using rule 65 (fator -> numero .)


state 26

    (46) expressao_aditiva -> expressao_multiplicativa .
    (49) expressao_multiplicativa -> expressao_multiplicativa . operador_multiplicacao expressao_unaria
    (60) operador_multiplicacao -> . MULTIPLICACAO
    (61) operador_multiplicacao -> . DIVISAO

  ! shift/reduce conflict for MULTIPLICACAO resolved as shift
  ! shift/reduce conflict for DIVISAO resolved as shift
    MENOR           reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    MAIOR           reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    IGUAL           reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    MENOR_IGUAL     reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    MAIOR_IGUAL     reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    NEGACAO         reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    FIM             reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    error           reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    SE              reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    REPITA          reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    LEIA            reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    ESCREVA         reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    RETORNA         reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    INTEIRO         reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    FLUTUANTE       reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    IDENTIFICADOR   reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    ABRE_COLXETE    reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    SOMA            reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    SUBTRACAO       reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    FECHA_COLXETE   reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    $end            reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    FECHA_PARENTESES reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    VIRGULA         reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    ENTAO           reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    ATE             reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    SENAO           reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .)
    MULTIPLICACAO   shift and go to state 52
    DIVISAO         shift and go to state 50

  ! MULTIPLICACAO   [ reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .) ]
  ! DIVISAO         [ reduce using rule 46 (expressao_aditiva -> expressao_multiplicativa .) ]

    operador_multiplicacao         shift and go to state 51

state 27

    (38) atribuicao -> var ATRIBUICAO expressao .

    INTEIRO         reduce using rule 38 (atribuicao -> var ATRIBUICAO expressao .)
    FLUTUANTE       reduce using rule 38 (atribuicao -> var ATRIBUICAO expressao .)
    IDENTIFICADOR   reduce using rule 38 (atribuicao -> var ATRIBUICAO expressao .)
    $end            reduce using rule 38 (atribuicao -> var ATRIBUICAO expressao .)
    FIM             reduce using rule 38 (atribuicao -> var ATRIBUICAO expressao .)
    error           reduce using rule 38 (atribuicao -> var ATRIBUICAO expressao .)
    SE              reduce using rule 38 (atribuicao -> var ATRIBUICAO expressao .)
    REPITA          reduce using rule 38 (atribuicao -> var ATRIBUICAO expressao .)
    LEIA            reduce using rule 38 (atribuicao -> var ATRIBUICAO expressao .)
    ESCREVA         reduce using rule 38 (atribuicao -> var ATRIBUICAO expressao .)
    RETORNA         reduce using rule 38 (atribuicao -> var ATRIBUICAO expressao .)
    ABRE_COLXETE    reduce using rule 38 (atribuicao -> var ATRIBUICAO expressao .)
    SOMA            reduce using rule 38 (atribuicao -> var ATRIBUICAO expressao .)
    SUBTRACAO       reduce using rule 38 (atribuicao -> var ATRIBUICAO expressao .)
    ATE             reduce using rule 38 (atribuicao -> var ATRIBUICAO expressao .)
    SENAO           reduce using rule 38 (atribuicao -> var ATRIBUICAO expressao .)
    FECHA_COLXETE   reduce using rule 38 (atribuicao -> var ATRIBUICAO expressao .)
    FECHA_PARENTESES reduce using rule 38 (atribuicao -> var ATRIBUICAO expressao .)
    VIRGULA         reduce using rule 38 (atribuicao -> var ATRIBUICAO expressao .)
    ENTAO           reduce using rule 38 (atribuicao -> var ATRIBUICAO expressao .)


state 28

    (43) expressao -> atribuicao .

    FECHA_COLXETE   reduce using rule 43 (expressao -> atribuicao .)
    FECHA_PARENTESES reduce using rule 43 (expressao -> atribuicao .)
    FIM             reduce using rule 43 (expressao -> atribuicao .)
    error           reduce using rule 43 (expressao -> atribuicao .)
    SE              reduce using rule 43 (expressao -> atribuicao .)
    REPITA          reduce using rule 43 (expressao -> atribuicao .)
    LEIA            reduce using rule 43 (expressao -> atribuicao .)
    ESCREVA         reduce using rule 43 (expressao -> atribuicao .)
    RETORNA         reduce using rule 43 (expressao -> atribuicao .)
    INTEIRO         reduce using rule 43 (expressao -> atribuicao .)
    FLUTUANTE       reduce using rule 43 (expressao -> atribuicao .)
    IDENTIFICADOR   reduce using rule 43 (expressao -> atribuicao .)
    ABRE_COLXETE    reduce using rule 43 (expressao -> atribuicao .)
    SOMA            reduce using rule 43 (expressao -> atribuicao .)
    SUBTRACAO       reduce using rule 43 (expressao -> atribuicao .)
    VIRGULA         reduce using rule 43 (expressao -> atribuicao .)
    ATE             reduce using rule 43 (expressao -> atribuicao .)
    SENAO           reduce using rule 43 (expressao -> atribuicao .)
    ENTAO           reduce using rule 43 (expressao -> atribuicao .)
    $end            reduce using rule 43 (expressao -> atribuicao .)


state 29

    (64) fator -> chamada_funcao .
